fixed style for scroll - add animated and hide on mobile

--- a/src/sass/bootstrap_c/_custom.sass
+++ b/src/sass/bootstrap_c/_custom.sass
@@ -549,7 +549,7 @@ p.drop-photo
   z-index: 100
   a
     font-size: rem(18)
-    color: rgba($small-text, .8)
+    color: rgba($small-text, .6)
     i
       font-size: rem(44)
       margin-right: 10px
@@ -559,4 +559,6 @@ p.drop-photo
       font-weight: bold
     &:hover
       color: rgba($small-text, 1)
+  @media only screen and (max-width : 991px)
+    display: none
 
